# serializer version: 1
# name: test_json_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_json_analyze_portfolio_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "portfolio": {
        "schema_version": 1,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            },
            {
              "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>"
            }
          ]
        },
        "origins": [
          {
            "origin": "chatgpt-export",
            "session_count": 2
          },
          {
            "origin": "claude-code-session",
            "session_count": 2
          }
        ],
        "repos_touched": [],
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "tokens": {
            "input_tokens": 174,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "cost_distribution": {
          "count": 0,
          "total": 0.0,
          "minimum": 0.0,
          "p50": 0.0,
          "p90": 0.0,
          "maximum": 0.0,
          "mean": 0.0
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 80251994107,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            }
          ]
        },
        "wallclock_distribution_s": {
          "count": 4,
          "total": 150690970.11,
          "minimum": 240.0,
          "p50": 360.0,
          "p90": 80251994.107,
          "maximum": 80251994.107,
          "mean": 37672742.5275
        },
        "pathologies": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "context_loss": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "top_pathologies": []
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_postmortem_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "postmortem": {
        "schema_version": 2,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            },
            {
              "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>"
            }
          ]
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 80251994107,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            }
          ]
        },
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "tokens": {
            "input_tokens": 174,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "repos_touched": [],
        "top_expensive_session": {
          "status": "no_signal",
          "total_cost_usd": 0.0,
          "cost_is_estimated": false,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ],
          "reason": "no session in scope carries a positive cost figure"
        },
        "subagent_branch_count": {
          "count": 0,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "longest_tool_gap": {
          "status": "unavailable",
          "reason": "per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0"
        },
        "wasted_loop": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "failure_mode": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        }
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_snapshot
  '''
  {
    "avg_messages_per_session": 5.0,
    "db_size_bytes": <SIZE_BYTES>,
    "embedded_messages": 0,
    "embedded_sessions": 0,
    "embedding_coverage_percent": 0.0,
    "embedding_dimensions": {},
    "embedding_models": {},
    "embedding_newest_at": null,
    "embedding_oldest_at": null,
    "embedding_readiness_status": "none",
    "material_origins": {
      "assistant_authored": 4,
      "human_authored": 6
    },
    "message_types": {
      "message": 10
    },
    "messages_missing_embedding_provenance": 0,
    "mode": "stats",
    "origin": null,
    "origin_count": 1,
    "origins": {
      "chatgpt-export": 2
    },
    "pending_embedding_sessions": 0,
    "query": null,
    "retrieval_ready": false,
    "role_counts": {
      "assistant": 4,
      "user": 6
    },
    "stale_embedding_messages": 0,
    "total_attachments": 0,
    "total_messages": 10,
    "total_sessions": 2
  }
  
  '''
# ---
# name: test_json_facets_snapshot
  '''
  {
    "scoped_to_query": false,
    "generated_at": "<TIMESTAMP>",
    "stale": false,
    "stale_age_s": null,
    "budget_exceeded": false,
    "complete_families": [
      "total_counts",
      "origins",
      "tags"
    ],
    "deferred_families": {
      "repos": "deferred_by_default",
      "role_counts": "deferred_by_default",
      "material_origins": "deferred_by_default",
      "message_types": "deferred_by_default",
      "action_types": "deferred_by_default",
      "has_flags": "deferred_by_default"
    },
    "family_errors": {},
    "family_status": {
      "total_counts": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Total counts",
        "source": "session summaries",
        "canonicalization": "unique sessions plus stored message counts",
        "expensive": false
      },
      "origins": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider origins",
        "source": "session summaries",
        "canonicalization": "provider/archive origin; not a repo or authoredness signal",
        "expensive": false
      },
      "tags": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "User tags",
        "source": "session summaries",
        "canonicalization": "session tags de-duplicated within each session",
        "expensive": false
      },
      "repos": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Canonical repositories",
        "source": "session_repos + repos",
        "canonicalization": "prefer repo_name or origin_url; omit archive/path tokens that are not product repo identities",
        "expensive": true
      },
      "role_counts": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider-role counts",
        "source": "messages.role",
        "canonicalization": "provider-reported message role; not authoredness",
        "expensive": true
      },
      "material_origins": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Material origins",
        "source": "messages.material_origin",
        "canonicalization": "authoredness/protocol provenance; separates human text from runtime or assistant material",
        "expensive": true
      },
      "message_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Message content types",
        "source": "messages.message_type",
        "canonicalization": "normalized message content kind",
        "expensive": true
      },
      "action_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Action types",
        "source": "actions.semantic_type",
        "canonicalization": "normalized semantic action kind",
        "expensive": true
      },
      "has_flags": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Content flags",
        "source": "messages.has_*",
        "canonicalization": "boolean message feature counters",
        "expensive": true
      }
    },
    "origins": {
      "chatgpt-export": 2
    },
    "tags": {},
    "repos": {},
    "cwd_prefixes": {},
    "role_counts": {},
    "message_types": {},
    "material_origins": {},
    "action_types": {},
    "has_flags": {},
    "omitted_facet_counts": {},
    "time_range": null,
    "total_sessions": 2,
    "total_messages": 10,
    "scoped": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 10
    },
    "global": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 10
    },
    "idf": {
      "origins": {
        "chatgpt-export": 0.0
      }
    }
  }
  
  '''
# ---
# name: test_json_read_all_snapshot
  '''
  {
    "items": [
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-402913ec-9ef2-493e-b0ac-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
        "message_count": 5,
        "origin": "chatgpt-export",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "target_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "target_type": "session"
        },
        "title": "corpus-01",
        "updated_at": "<TIMESTAMP>",
        "words": 90
      },
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-8a476a87-e49d-481d-91d8-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
        "message_count": 5,
        "origin": "chatgpt-export",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "target_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "target_type": "session"
        },
        "title": "corpus-00",
        "updated_at": "<TIMESTAMP>",
        "words": 164
      }
    ],
    "limit": 20,
    "mode": "list",
    "next_cursor": null,
    "next_offset": null,
    "offset": 0,
    "origin": null,
    "total": 2
  }
  
  '''
# ---
# name: test_json_status_snapshot
  '''
  {
    "ok": true,
    "source": "direct",
    "daemon_liveness": false,
    "full_status_command": "polylogue ops status --json --full",
    "archive_root": "<PATH>",
    "active_archive_root": "<PATH>",
    "active_archive_root_matches_configured": true,
    "db_exists": true,
    "active_db_path": "<PATH>",
    "config_exists": false,
    "config_path": "<PATH>",
    "sessions": 2,
    "messages": 10,
    "raw_records": 2,
    "next_action": "polylogue init",
    "component_readiness": {
      "raw_materialization": {
        "component": "raw_materialization",
        "scope": "archive",
        "state": "ready",
        "summary": "ready",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "total": 0,
          "critical": 0,
          "warning": 0,
          "actionable": 0,
          "blocked": 0,
          "classified": 0,
          "affected_total": 0,
          "affected_actionable": 0,
          "affected_open": 0,
          "affected_classified": 0,
          "unchecked": 0,
          "affected_unchecked": 0,
          "lost_source_evidence_count": 0,
          "raw_artifact_count": 0,
          "materialized_raw_artifact_count": 0,
          "archive_session_count": 0,
          "join_gap_count": 0
        },
        "caveats": [],
        "repair_hint": null,
        "evidence_refs": [],
        "metadata": {
          "category_counts": {
            "raw_id_join_gap": 0,
            "skipped": 0,
            "parse_failed": 0,
            "parsed_without_index_session": 0
          },
          "source_family_counts": {},
          "lost_source_evidence_samples": []
        }
      },
      "embeddings": {
        "component": "embeddings",
        "scope": "semantic",
        "state": "missing",
        "summary": "none",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "total_sessions": 2,
          "embedded_sessions": 0,
          "embedded_messages": 0,
          "pending_sessions": 2,
          "pending_messages": null,
          "pending_messages_exact": false,
          "stale_messages": 0,
          "failure_count": 0,
          "retrieval_ready": false
        },
        "caveats": [],
        "repair_hint": "polylogue ops embed enable --voyage-api-key ...",
        "evidence_refs": []
      },
      "assertions": {
        "component": "assertions",
        "scope": "user",
        "state": "ready",
        "summary": "ready",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "assertion_count": 0,
          "target_count": 0,
          "active_count": 0
        },
        "caveats": [],
        "repair_hint": null,
        "evidence_refs": [
          "user.db:assertions"
        ],
        "metadata": {
          "overlay_audit": {
            "surfaces": [
              {
                "name": "marks",
                "storage": "assertions",
                "assertion_kind": "mark",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "highlights",
                "storage": "assertions",
                "assertion_kind": "highlight",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "annotations",
                "storage": "assertions",
                "assertion_kind": "annotation",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "suppressions",
                "storage": "assertions",
                "assertion_kind": "suppression",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "corrections",
                "storage": "assertions",
                "assertion_kind": "correction",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "tag_assertions",
                "storage": "assertions",
                "assertion_kind": "tag",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "metadata_assertions",
                "storage": "assertions",
                "assertion_kind": "metadata",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "saved_views",
                "storage": "assertions",
                "assertion_kind": "saved_query",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "recall_packs",
                "storage": "assertions",
                "assertion_kind": "recall_pack",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "workspaces",
                "storage": "assertions",
                "assertion_kind": "workspace_note",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "blackboard_notes",
                "storage": "assertions",
                "assertion_kind": "note",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "decisions",
                "storage": "assertions",
                "assertion_kind": "decision",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "caveats",
                "storage": "assertions",
                "assertion_kind": "caveat",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "lessons",
                "storage": "assertions",
                "assertion_kind": "lesson",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "blockers",
                "storage": "assertions",
                "assertion_kind": "blocker",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "handoffs",
                "storage": "assertions",
                "assertion_kind": "handoff",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "judgments",
                "storage": "assertions",
                "assertion_kind": "judgment",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "run_state",
                "storage": "assertions",
                "assertion_kind": "run_state",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "prompt_evals",
                "storage": "assertions",
                "assertion_kind": "prompt_eval",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "transform_candidates",
                "storage": "assertions",
                "assertion_kind": "transform_candidate",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "pathologies",
                "storage": "assertions",
                "assertion_kind": "pathology",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              }
            ]
          }
        }
      },
      "transforms": {
        "component": "transforms",
        "scope": "session-analysis",
        "state": "unknown",
        "summary": "direct_status_default_skips_exact_archive_readiness",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "transform_count": 1,
          "session_digest_transform_version": 1
        },
        "caveats": [
          "direct_status_default_skips_exact_archive_readiness"
        ],
        "repair_hint": null,
        "evidence_refs": [
          "transform_registry"
        ]
      }
    },
    "archive_tiers": {
      "source": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 2,
        "user_version": 2,
        "version_status": "ok",
        "table_counts": {
          "raw_sessions": 2,
          "blob_refs": 2,
          "raw_artifacts": 0,
          "raw_hook_events": 0,
          "history_sidecars": 0
        },
        "table_count_precision": {
          "raw_sessions": "exact",
          "blob_refs": "exact",
          "raw_artifacts": "exact",
          "raw_hook_events": "exact",
          "history_sidecars": "exact"
        }
      },
      "index": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 24,
        "user_version": 24,
        "version_status": "ok",
        "table_counts": {
          "sessions": 2,
          "messages": 10,
          "blocks": 27,
          "session_profiles": 0,
          "session_work_events": 0,
          "session_phases": 0,
          "threads": 2,
          "thread_sessions": 2,
          "insight_materialization": 0
        },
        "table_count_precision": {
          "sessions": "exact",
          "messages": "exact",
          "blocks": "exact",
          "session_profiles": "exact",
          "session_work_events": "exact",
          "session_phases": "exact",
          "threads": "exact",
          "thread_sessions": "exact",
          "insight_materialization": "exact"
        }
      },
      "embeddings": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 1,
        "user_version": 1,
        "version_status": "ok",
        "table_counts": {
          "message_embeddings_meta": 0,
          "embedding_status": 0
        },
        "table_count_precision": {
          "message_embeddings_meta": "exact",
          "embedding_status": "exact"
        }
      },
      "user": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 4,
        "user_version": 4,
        "version_status": "ok",
        "table_counts": {
          "assertions": 0
        },
        "table_count_precision": {
          "assertions": "exact"
        }
      },
      "ops": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 1,
        "user_version": 1,
        "version_status": "ok",
        "table_counts": {
          "ingest_cursor": 0,
          "ingest_attempts": 0,
          "convergence_debt": 0,
          "cursor_lag_samples": 0,
          "daemon_stage_events": 0,
          "daemon_events": 0,
          "embedding_catchup_runs": 0,
          "otlp_spans": 0,
          "otlp_telemetry": 0
        },
        "table_count_precision": {
          "ingest_cursor": "exact",
          "ingest_attempts": "exact",
          "convergence_debt": "exact",
          "cursor_lag_samples": "exact",
          "daemon_stage_events": "exact",
          "daemon_events": "exact",
          "embedding_catchup_runs": "exact",
          "otlp_spans": "exact",
          "otlp_telemetry": "exact"
        }
      }
    },
    "sqlite_maintenance": {
      "archive_root": "<PATH>",
      "total_wal_bytes": 0,
      "tiers_with_planner_stats": [
        "source",
        "index",
        "embeddings"
      ],
      "tiers": {
        "source": {
          "path": "<PATH>",
          "exists": true,
          "wal_bytes": 0,
          "sqlite_stat1_rows": 7,
          "planner_stats_present": true
        },
        "index": {
          "path": "<PATH>",
          "exists": true,
          "wal_bytes": 0,
          "sqlite_stat1_rows": 36,
          "planner_stats_present": true
        },
        "embeddings": {
          "path": "<PATH>",
          "exists": true,
          "wal_bytes": 0,
          "sqlite_stat1_rows": 1,
          "planner_stats_present": true
        },
        "user": {
          "path": "<PATH>",
          "exists": true,
          "wal_bytes": 0,
          "sqlite_stat1_rows": 0,
          "planner_stats_present": false
        },
        "ops": {
          "path": "<PATH>",
          "exists": true,
          "wal_bytes": 0,
          "sqlite_stat1_rows": 0,
          "planner_stats_present": false
        }
      }
    },
    "storage": {
      "active_db_path": "<PATH>"
    },
    "ingest": {
      "available": true,
      "actively_ingesting": false,
      "running_count": 0,
      "running": [],
      "throughput": {
        "window_minutes": 5,
        "batches": 0,
        "files": 0,
        "materialized": 0,
        "files_per_second": 0.0
      },
      "cursor": {
        "tracked": 0,
        "excluded": 0,
        "retry_pending": 0
      },
      "debt": {
        "total": 0,
        "by_status": {}
      },
      "lifetime_attempts": {}
    },
    "raw_materialization_readiness": {
      "available": true,
      "classification": "not_run",
      "precision": "raw_id_join_gap",
      "raw_artifact_count": 0,
      "materialized_raw_artifact_count": 0,
      "archive_session_count": 0,
      "join_gap_count": 0,
      "total": 0,
      "critical": 0,
      "warning": 0,
      "actionable": 0,
      "blocked": 0,
      "classified": 0,
      "unchecked": 0,
      "affected_total": 0,
      "affected_actionable": 0,
      "affected_blocked": 0,
      "affected_open": 0,
      "affected_classified": 0,
      "affected_unchecked": 0,
      "lost_source_evidence_count": 0,
      "lost_source_evidence_samples": [],
      "category_counts": {
        "raw_id_join_gap": 0,
        "skipped": 0,
        "parse_failed": 0,
        "parsed_without_index_session": 0
      },
      "source_family_counts": {}
    },
    "raw_replay_backlog": {
      "available": true,
      "candidate_count": 0,
      "missing_blob_count": 0,
      "already_parsed_count": 0,
      "total_blob_bytes": 0,
      "max_blob_bytes": 0,
      "execute_blob_limit_bytes": 1073741824,
      "oversized_count": 0,
      "oversized_stream_safe_count": 0,
      "top_raw_rows": [],
      "origin_summary": []
    },
    "diagnostic": {
      "kind": "no_sources",
      "headline": "No configured chat sources.",
      "detail": "No `<PATH>` found. Run `polylogue init` to detect chat sources and write a starter config.",
      "next_action": "polylogue init"
    }
  }
  
  '''
# ---
# name: test_markdown_analyze_portfolio_snapshot
  '''
  # Portfolio Report
  
  - **Scope:** archive-start → now
  - **Sessions:** 4 analyzed / 4 matched
  - **Origins:** chatgpt-export (2), claude-code-session (2)
  - **Total cost:** $0.00 _(estimated)_
  - **Tokens:** in 174, out 0, cache-read 0, cache-write 0
  
  ## Distributions
  
  - Cost per session (USD): no signal
  - Wall time per session: n=4 total=1.50691e+<DURATION> min=240 p50=360 p90=8.0252e+07 max=8.0252e+07 mean=3.76727e+07
  
  ## Failure-mode pathologies
  
  - **Overall:** clean — detectors ran; no pathology found
  - **Context loss:** clean — detectors ran; no pathology found
  
  
  '''
# ---
# name: test_markdown_analyze_postmortem_snapshot
  '''
  # Postmortem Bundle
  
  ## Scope
  - Matched sessions: 4
  - Analyzed sessions: 4
  - Since: (unbounded)
  - Until: (unbounded)
  - Query: (none)
  
  ## Headline
  
  | Field | Value |
  | --- | --- |
  | session_count | 4 |
  | wallclock_span | span_ms=80251994107, summed_wall_ms=<HASH> |
  | estimated_cost_usd | $0.000000 (estimated) |
  | token_lanes | input=174, output=0, cache_read=0, cache_write=0 |
  | top_expensive_session | no_signal: no session in scope carries a positive cost figure |
  | repos_touched | (none) |
  | subagent_branch_count | 0 |
  | longest_tool_gap | unavailable (per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0) |
  | wasted_loop | clean (no pathology found) |
  | failure_mode | clean (no pathology found) |
  
  ## Evidence
  
  | Field | Evidence refs |
  | --- | --- |
  | session_count | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>, chatgpt-export:8a476a87-e49d-481d-91d8-<HASH> |
  | wallclock_span | chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH> |
  | estimated_cost | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  | top_expensive_session | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  | subagent_branch_count | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  
  
  '''
# ---
# name: test_plain_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_plain_analyze_portfolio_snapshot
  '''
  Polylogue Portfolio Report
  scope: archive-start → now
  sessions: analyzed=4 matched=4
  origins: chatgpt-export=2, claude-code-session=2
  total_cost: $0.00 (estimated)
  tokens: in=174 out=0 cache_read=0 cache_write=0
  cost_per_session_usd: no signal
  wall_per_session_s: n=4 total=1.50691e+<DURATION> min=240 p50=360 p90=8.0252e+07 max=8.0252e+07 mean=3.76727e+07
  wallclock_span_ms: 80251994107
  pathologies: clean (detectors ran; no pathology found)
  context_loss: clean (detectors ran; no pathology found)
  
  '''
# ---
# name: test_plain_analyze_postmortem_snapshot
  '''
  Postmortem bundle
    scope: matched=4, analyzed=4
    sessions: 4
    wallclock: span_ms=80251994107 summed_wall_ms=<HASH> (<TIMESTAMP> -> <TIMESTAMP>)
    cost: $0.000000 (estimated)
      tokens: input=174 output=0 cache_read=0 cache_write=0
    top_expensive_session: no_signal (no session in scope carries a positive cost figure)
    repos_touched: (none)
    subagent_branch_count: 0
    longest_tool_gap: unavailable (per-tool-call timestamps are not present in the session profile or session digest; longest_tool_gap is not cheaply derivable in v0)
    wasted_loop: clean (no pathology found)
    failure_mode: clean (no pathology found)
    evidence:
      session_count: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>, chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>
      wallclock_span: chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>
      estimated_cost: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
      top_expensive_session: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
      subagent_branch_count: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
  
  '''
# ---
# name: test_plain_analyze_snapshot
  '''
  Sessions: 2
  Messages: 10
  Attachments: 0
  Origins: 1
  Average messages: 5.0
  
  '''
# ---
# name: test_plain_read_all_origin_filter_snapshot
  '''
  chatgpt-export:402913ec-  <TIMESTAMP>  chatgpt-export            corpus-01 (5 msgs)
  chatgpt-export:8a476a87-  <TIMESTAMP>  chatgpt-export            corpus-00 (5 msgs)
  
  '''
# ---
# name: test_plain_read_all_snapshot
  '''
  chatgpt-export:402913ec-  <TIMESTAMP>  chatgpt-export            corpus-01 (5 msgs)
  chatgpt-export:8a476a87-  <TIMESTAMP>  chatgpt-export            corpus-00 (5 msgs)
  
  '''
# ---
